--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
   <section id="gallery">
   <h2>Galeri</h2>
   <div class="gallery">
-    <img src="d:\tania\11.jpg" alt="Moment">
+    <img src="tania\11.jpg" alt="Moment">
     <img src="d:\tania\12.jpg" alt="Moment">
     <img src="d:\tania\13.jpg" alt="Moment">
     <img src="d:\tania\14.jpg" alt="Moment">
@@ -886,3 +886,4 @@
   </script>
 </body>
 </html>
+
